# pod-kpassapk-emacs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bb.edn  pod-babashka-emacs
.github/workflows/: release.yml  test.yml
doc/: api-roadmap.md  design.md  packages.md  release.md
doc/adr/: 0001-transport-architecture.md  01-transport-architecture.md  02-socket-transport.md
docs/: design.md
examples/: README.md  calc-units.bb  devops.bb  devops.org  editor.bb  eval.bb  org-execute.clj  org-outline.clj  org-portal.bb  org-runme.bb  org-tui.bb  runbook.org  sample.org
resources/: pod-emacs-calc.el  pod-emacs-devops.el  pod-emacs-ob-babashka.el  pod-emacs-org-roam.el  pod-emacs-org.el  pod-emacs-project.el  pod-emacs-util.el  pod-emacs.el
scripts/: release.clj  run-tests.clj
src/: elisp.rs  main.rs
src/pod_babashka_emacs/: emacs.clj  shim.clj
test/pod_babashka_emacs/: pod_test.clj
test/pod_kpassapk_emacs/: pod_test.clj
