[package]
name = "pod-kpassapk-emacs"
version = "0.3.1"
edition = "2021"
description = "Babashka pod exposing Emacs (eval elisp, read org as EDN)"
repository = "https://github.com/kpassapk/pod-kpassapk-emacs"
license = "EPL-1.0"

[dependencies]
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
